--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="by-name">
       <h2>OCaml package documentation</h2>
       <ol>
-      <li><a href="conformist/index.html">conformist</a> <span class="version">0.4.0</span></li>
+      <li><a href="conformist/index.html">conformist</a> <span class="version">0.4.0-2-g987e3cd</span></li>
       </ol>
       </div>
     </main>
